edit text, font text

--- a/index.html
+++ b/index.html
@@ -100,61 +100,61 @@
                     <div class="col">
                         <img src="./assets/image/art-img-03.png" alt="article-03" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Hello world, or, in other words, why this blog exists
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-04.png" alt="article-04" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Here are some things you should know regarding how we work 
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-05.png" alt="article-05" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Connecting artificial intelligence with digital product design
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-06.png" alt="article-06" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            It's all about finding the perfect balance
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-07.png" alt="article-07" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            I believe learning is the most important skill
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-08.png" alt="article-08" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Clients are part of the team
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-09.png" alt="article-09" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Clients are part of the team
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-10.png" alt="article-10" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Here are some things you should know regarding how we work 
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-11.png" alt="article-11" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            Connecting artificial intelligence with digital product design
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-12.png" alt="article-12" class="content__article-img">
                         <div class="content__article-desc">
-                            Granny gives everyone the finger, and other tips from OFFF Barcelona
+                            How modern remote working tools get along with Old School Cowboy's methods
                         </div>
                     </div>
                     
@@ -182,8 +182,8 @@
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-14.png" alt="article-04" class="content__article-img">
-                        <div class="content__article-desc">
-                            Updating list of 50+ sources on distributed teams, remote work, and how to make it all work better
+                        <div class="content__article-desc sf-pro-display">
+                            Updating list of 50+ sources on distributed teams, remote work, and how to make it all<br> work better
                         </div>
                     </div>
                     <div class="col">
@@ -234,7 +234,7 @@
 
             <!-- Footer desciption paragaph -->
             <div class="footer__desc ny-small margin-lr-auto">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula suscipit finibus. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula <span class="hidden-mobile">suscipit finibus</span>.
             </div>
 
             <!-- Footer social contact -->
