--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-14.png" alt="article-04" class="content__article-img">
-                        <div class="content__article-desc sf-pro-display">
-                            Updating list of 50+ sources on distributed teams, remote work, and how to make it all<br> work better
+                        <div class="content__article-desc sf-pro-display width-282">
+                            Updating list of 50+ sources on distributed teams, remote work, and how to make it all work better
                         </div>
                     </div>
                     <div class="col">
@@ -205,7 +205,7 @@
         <!-- Footer section -->
         <footer class="footer">
             <!-- Footer list feature -->
-            <div class="footer__feature-list sf-pro-display margin-lr-auto">
+            <div class="footer__feature-list sf-pro-text margin-lr-auto">
                 <div class="footer__feature-item">Digital product design</div>
                 <div class="footer__feature-item">Remote work</div>
                 <div class="footer__feature-item">UX design</div>
