fix footer feature list

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     </div>
                     <div class="col">
                         <img src="./assets/image/art-img-12.png" alt="article-06" class="content__article-img">
-                        <div class="content__article-desc">
+                        <div class="content__article-desc width-270">
                             How modern remote working tools get along with Old School Cowboy's methods
                         </div>
                     </div>
